--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,10 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Create .env file
+      run: |
+        echo "VITE_FINNHUB_API_KEY=${{ secrets.FINNHUB_API_KEY }}" > .env
+
     - name: Build
       run: npm run build
 
