--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,6 @@ node_modules/
 .pnp
 .pnp.js
 
-# Production
-dist/
-build/
-
 # Environment variables
 .env
 .env.local
@@ -17,6 +13,43 @@ build/
 # Logs
 npm-debug.log*
 yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary folders
+tmp/
+temp/
+
+# Cache
+.cache/
+.parcel-cache/
+
+# Vite
+.vite/
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
